--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "Domain\\": "src/Domain",
+            "App\\": "src/App",
+            "Infra\\": "src/Infra",
+            "Interfaces\\": "src/Interfaces",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
