feat: use the env timezone

--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,9 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+UTC=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-JIKAN_API_URI
+JIKAN_API_URI=
