--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "firebase": "^10.7.1",
         "react-toastify": "^9.1.3"
     }
 }
