feat: add sentry

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,8 @@ FIREBASE_SERVER_KEY=
 
 VITE_VAPID_PUBLIC_KEY=
 VITE_VAPID_PRIVATE_KEY=
+
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
+VITE_SENTRY_DSN_PUBLIC=
