--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@sentry/react": "^7.40.0",
         "firebase": "^10.7.1",
         "react-toastify": "^9.1.3"
     }
