--- a/.env.example
+++ b/.env.example
@@ -58,20 +58,22 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
+VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
+VITE_VAPID_PUBLIC_KEY=
+VITE_VAPID_PRIVATE_KEY=
+
 UTC=
+
+TELESCOPE_ENABLED=true
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-JIKAN_API_URI=
-
 FIREBASE_DATABASE_URL=
 FIREBASE_SERVER_KEY=
 
-VITE_VAPID_PUBLIC_KEY=
-VITE_VAPID_PRIVATE_KEY=
-
-SENTRY_LARAVEL_DSN=
-SENTRY_TRACES_SAMPLE_RATE=1.0
-
-VITE_SENTRY_DSN_PUBLIC=
+# INTEGRATIONS URL
+JIKAN_API_URI=
