--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/horizon": "^5.21",
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.10",
+        "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
         "sentry/sentry-laravel": "^4.1",
         "tightenco/ziggy": "^1.0"
@@ -60,7 +61,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
