feat: add cookie-js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@sentry/react": "^7.40.0",
         "firebase": "^10.7.1",
+        "js-cookie": "^3.0.5",
         "react-toastify": "^9.1.3"
     }
 }
