--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -58,22 +59,20 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SENTRY_LARAVEL_DSN=
-SENTRY_TRACES_SAMPLE_RATE=1.0
-
-VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
-VITE_VAPID_PUBLIC_KEY=
-VITE_VAPID_PRIVATE_KEY=
-
-UTC=
-
 TELESCOPE_ENABLED=true
 
+# SENTRY
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
+
+# PUSH NOTIFICATION
+FIREBASE_CREDENTIALS=firebase_credentials.json
+VITE_VAPID_PUBLIC_KEY=
+
+# AUTHENTICATION
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-
-FIREBASE_DATABASE_URL=
-FIREBASE_SERVER_KEY=
 
 # INTEGRATIONS URL
 JIKAN_API_URI=
