--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,8 +16,6 @@ jobs:
       DB_PASSWORD: postgres
       DB_USERNAME: postgres
       DB_DATABASE: postgres
-      DB_PORT: 5432
-      REDIS_POR: 6379
 
     # Docs: https://docs.github.com/en/actions/using-containerized-services
     services:
@@ -79,6 +77,12 @@ jobs:
 
       - name: Run Migration
         run: php artisan migrate -v
+        env:
+          DB_PORT: ${{ job.services.postgres.ports[5432] }}
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
 
       - name: Test with phpunit
         run: vendor/bin/phpunit --coverage-text
+        env:
+          DB_PORT: ${{ job.services.postgres.ports[5432] }}
+          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
