--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
-APP_NAME=Laravel
+APP_NAME=AnimeSchedule
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=Asia/Tokyo
+APP_TIMEZONE=America/Sao_Paulo
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -67,12 +67,14 @@ SENTRY_TRACES_SAMPLE_RATE=1.0
 VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
 
 # PUSH NOTIFICATION
+# https://console.firebase.google.com/
 FIREBASE_CREDENTIALS=firebase_credentials.json
 VITE_VAPID_PUBLIC_KEY=
 
 # AUTHENTICATION
+# https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # INTEGRATIONS URL
-JIKAN_API_URI=
+JIKAN_API_URI="https://api.jikan.moe/v4"
